fix(product-artist-galery): responsive images size on mobile

--- a/src/scss/ui/_article.scss
+++ b/src/scss/ui/_article.scss
@@ -21,6 +21,12 @@
     }
     &__img{
         height: 100%;
+        width: 100%;
         object-fit: cover;
+        max-height: 30rem;
+
+        @include m.tablet{
+            max-height: none;
+        }
     }
 }
